--- a/client/src/common/FormikInputField/FormikInputField.css
+++ b/client/src/common/FormikInputField/FormikInputField.css
@@ -1,7 +1,45 @@
+.FormikInputDiv {
+  width: 400px;
+  height: 75px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-bottom: 10px;
+}
+
 .FormikInputField {
-  width: 466px;
-  height: 54px;
-  background-color: #d2d2d2 !important;
+  color: black;
+  padding-left: 22px;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  width: 380px;
+  height: 32px;
+  background-color: #fff3f3;
   border-radius: 10px;
-  border: solid #d2d2d2;
+  border: solid #fff3f3;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.FormikInputField::placeholder {
+  position: relative;
+  top: 1px;
+  color: rgba(0, 0, 0, 0.7);
+  padding-left: 22px;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Montserrat", sans-serif;
+}
+
+.FormikInputField:focus {
+  outline: none;
+  background-color: #fff3f3;
+}
+
+.FormikErrorMessage {
+  padding: 10px 10px 0 0;
+  color: rgba(255, 0, 0, 0.8);
+  font-size: 14px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
 }
