--- a/client/src/common/SubmitButton/SubmitButton.css
+++ b/client/src/common/SubmitButton/SubmitButton.css
@@ -1,11 +1,31 @@
+.SubmitButtonDiv {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
 .SubmitButton {
   background-color: #43f340;
-  height: 54px !important;
-  width: 251px !important;
+  height: 42px;
+  width: 200px;
   border: solid #43f340;
   border-radius: 10px;
   margin-top: 20px;
+  margin-bottom: 50px;
   color: black;
-  font-size: 28px;
-  font-family: var(--font);
+  font-size: 22px;
+  font-family: "Montserrat", sans-serif;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  transition: 0.3s;
+}
+.SubmitButton:hover {
+  background-color: #41c23f;
+  border: solid #41c23f;
+  filter: drop-shadow(0px 8px 8px rgba(0, 0, 0, 0.25));
+  cursor: pointer;
+}
+.SubmitButton:target {
+  background-color: #47ff44;
+  border: solid #47ff44;
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.25));
 }
