--- a/client/src/pages/auth/login/login.css
+++ b/client/src/pages/auth/login/login.css
@@ -1,8 +1,12 @@
-.loginPageDiv {
+.LoginSection {
+  width: 580px;
+  height: auto;
   background-color: #d1dad1;
-  padding: 30px;
+  padding: 80px 0px;
   border-radius: 20px;
   display: flex;
-  align-items: flex end;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.25));
 }
