--- a/client/src/pages/auth/components/AuthPage.css
+++ b/client/src/pages/auth/components/AuthPage.css
@@ -1,4 +1,4 @@
-.LoginSection {
+.AuthPageBox {
   width: 580px;
   height: auto;
   background-color: #d1dad1;
@@ -9,4 +9,8 @@
   align-items: center;
   justify-content: center;
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.25));
+}
+
+#BigAuthBox {
+  margin: 500px auto 200px auto;
 }
