--- a/client/src/pages/auth/components/AuthPage.css
+++ b/client/src/pages/auth/components/AuthPage.css
@@ -1,4 +1,5 @@
 .AuthPageBox {
+  margin: 100px 0 100px 0;
   width: 580px;
   height: auto;
   background-color: #d1dad1;
@@ -9,8 +10,4 @@
   align-items: center;
   justify-content: center;
   filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.25));
-}
-
-#BigAuthBox {
-  margin: 500px auto 200px auto;
 }
