--- a/client/src/common/FormikSelectField/FormikSelectField.css
+++ b/client/src/common/FormikSelectField/FormikSelectField.css
@@ -24,7 +24,7 @@
   border: solid #fff3f3;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-option[value=""][disabled] {
+option[value="0"][disabled] {
   display: none;
 }
 
